styles/base.styl
html, body
  width 150%
  height 100%
  overflow hidden
  background-color black

.text-container
  opacity 1
  position absolute
  top 40%
  left 30%

  .text
    color white

  #text2
    position absolute
    top 0

  #rainbowWord
    position relative
    float right
    clear none
    top -110px
    right -90px
    width 300px
    padding 0

.container
  opacity 0
  height 100%
  background-image url('../images/spacetile.jpg')
  background-repeat cover

.nyan-cat
  position relative
  top 50%
  left 0
  transform rotate(-8 deg)
  height 80px
  color white

.pizza
  display none
  position absolute
  height 170px
  top 20%
  right 10%
  transform skewY(-12deg) skewX(40deg)

.comet
  position absolute

.comet1
  left 1700px
  top 0px
  opacity 1
  transform rotate(-38 deg)
  border none

.comet2
  opacity 0
  bottom 350px
  left 1100px
  transform rotate(-38 deg)

.comet3
  display none

.comet4
  display none

.comet5
  display none

